First steps for blog blocks

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Petro Salema &bull; Designer &middot; Programmer &middot; Speaker
+title: Petro Salema • Designer ･ Programmer ･ Speaker
 
 description: > # this means to ignore newlines until "baseurl:"
   My mission is to bring the promises of the future into the present through
