--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-title: Petro Salema • Designer ･ Programmer ･ Speaker
+title: From vision to version 1.0
 
 description: > # this means to ignore newlines until "baseurl:"
-  My mission is to bring the promises of the future into the present through
-  technology, design and truth.
+  Helping companies go from vision to version 1.0
 
 baseurl: "" # the subpath of your site, e.g. /blog
 
