--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
 
-url: "http://petrosalema.com" # the base hostname & protocol for your site
+url: "http://www.petrosalema.com" # the base hostname & protocol for your site
 
 exclude:
     - git
