Add website label to each page's title

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Petro Salema - React Native and Angular JavaScript expert
+title: Petro Salema. - React Native and Angular JavaScript expert
 
 description: > # this means to ignore newlines until "baseurl:"
   Petro Salema. React Native/Angular Javascript and mobile expert. Helping companies go from vision to version 1.0
